Translated list educational materials

--- a/templates/educational-material/educational-material.html
+++ b/templates/educational-material/educational-material.html
@@ -12,30 +12,30 @@
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-9 title-content">
                             <span class="glyphicon glyphicon-book"></span>
-                            <h1><strong>Educational Material</strong></h1>
+                            <h1><strong>{{'EDUCATION.LIST.TITLE'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
                         <div class="col-md-3 title-breadcrumbs">
-                            <span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Edu Material</strong></span>
+                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'EDUCATION.LIST.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
                     <div class="row clearfix operations">
                         <div class="save-add col-xs-12 col-sm-6 col-md-8 col-lg-9">
                             <!-- Add button -->
-                            <a style="width:100px;margin-right:20px;" href="" ng-click="goToAddEducationalMaterial()" class="btn btn-md btn-outline item-button">
+                            <a style="margin-right:20px;" href="" ng-click="goToAddEducationalMaterial()" class="btn btn-md btn-outline item-button">
                                 <span style="font-size: 17px;" class="glyphicon glyphicon-plus"></span>
-                                <span style="font-size: 20px;"><strong>Add</strong></span>
+                                <span style="font-size: 20px;"><strong>{{'EDUCATION.LIST.ADD'|translate}}</strong></span>
                             </a>
                             <!-- Save changes button -->
                             <a href="" ng-click="submitPublishFlags()" class="btn btn-md item-button-success animated" ng-if="changesMade" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false">
                                 <span style="font-size: 17px;" class="glyphicon glyphicon-ok"></span>
-                                <span style="font-size: 20px;"><strong>Save Changes</strong></span>
+                                <span style="font-size: 20px;"><strong>{{'EDUCATION.LIST.SAVE'|translate}}</strong></span>
                             </a>
                         </div>
                         <!-- Search field -->
                         <div class="search col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <div class="form-group has-feedback" style="margin-bottom: 0">
-                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterEduMat(filterValue)" placeholder="Search...">
+                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterEduMat(filterValue)" placeholder="{{'EDUCATION.LIST.SEARCH'|translate}}">
                                 <span class="glyphicon glyphicon-search form-control-feedback"></span>
                             </div>
                         </div>
@@ -45,12 +45,12 @@
                             <div class="btn-group btn-group-justified" role="group" aria-label="...">
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn btn-default" ng-click="switchDetailView('list')" ng-class="{'active': detailView == 'list', 'disabled': changesMade}">
-                                        <i class="fa fa-list"></i> List
+                                        <i class="fa fa-list"></i> {{'EDUCATION.LIST.LIST'|translate}}
                                     </button>
                                 </div>
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn btn-default" ng-click="switchDetailView('chart')" ng-class="{'active': detailView == 'chart', 'disabled': changesMade}">
-                                        <i class="fa fa-area-chart"></i> Logs
+                                        <i class="fa fa-area-chart"></i> {{'EDUCATION.LIST.LOGS'|translate}}
                                     </button>
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                             <div class="panel-container" ng-if="!educationalMaterialChartLogs.length">
                                 <div class="panel-info">
                                     <div class="jumbotron content" style="background-color: transparent; margin-bottom:0">
-                                        <p style="font-size:45px;">No data available</p>
+                                        <p style="font-size:45px;">{{'EDUCATION.LIST.NO_DATA'|translate}}</p>
                                     </div>
                                 </div>
                             </div>
