--- a/templates/hospital-map/edit.hospital-map.html
+++ b/templates/hospital-map/edit.hospital-map.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6">
                     <div class="input-group">
-                        <span class="input-group-addon">{{'HOSPITAL_MAPS.EDIT.ERROR_DETAILS'|translate}}</span>
+                        <span class="input-group-addon">{{'HOSPITAL_MAPS.EDIT.FRENCH_ABRV'|translate}}</span>
                         <input class="form-control" type="text" ng-model="hosMap.url_FR" ng-change="setChangesMade()" placeholder="{{'HOSPITAL_MAPS.EDIT.FRENCH_MAP_URL'|translate}}" required="required">
                         <span class="input-group-btn">
               <button class="btn btn-default" type="button" ng-click="showMap(hosMap.url_FR, 'FR')">{{'HOSPITAL_MAPS.EDIT.SHOW_MAP'|translate}}</button>
