Translated notifications delete page

--- a/templates/educational-material/delete.educational-material.html
+++ b/templates/educational-material/delete.educational-material.html
@@ -19,8 +19,8 @@
     <div class="row">
         <div class="modal-buttons col-xs-12">
             <form method="post" ng-submit="deleteEducationalMaterial()">
-                <input class="btn btn-primary submit" type="submit" value="Delete">
-                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel">
+                <input class="btn btn-primary submit" type="submit" value="{{'EDUCATION.DELETE.DELETE'|translate}}">
+                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'EDUCATION.DELETE.CANCEL'|translate}}">
             </form>
         </div>
     </div>
