--- a/templates/notification/delete.notification.html
+++ b/templates/notification/delete.notification.html
@@ -1,27 +1,27 @@
 <div class="modal-header">
-  <div class="col-xs-12">
-    <h2 class="modal-title">
-      <span class="glyphicon glyphicon-trash"></span> 
-      Delete Notification 
-    </h2>
-    <p class="modal-title-caption">
-      {{notificationToDelete.name_EN}} / {{notificationToDelete.name_FR}}
-    </p>
-  </div>
+    <div class="col-xs-12">
+        <h2 class="modal-title ">
+            <span class="glyphicon glyphicon-trash"></span>
+            {{'NOTIFICATIONS.DELETE.TITLE'|translate}}
+        </h2>
+    </div>
 </div>
 <div class="modal-body">
-  <div class="alert alert-danger" role="alert">
-    <strong>Delete Notification</strong><br>
-    <p>
-      Are you sure you want to delete the notification "{{notificationToDelete.name_EN}}" ?
-    </p>
-  </div>
-  <div class="row">
-    <div class="modal-buttons col-xs-12">
-      <form method="post" ng-submit="deleteNotification()">      
-        <input class="btn btn-primary submit" type="submit" value="Delete">
-        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel">
-      </form>
+    <div class="alert alert-danger" role="alert">
+        <p><b>{{'NOTIFICATIONS.DELETE.WARNING'|translate}}</b> {{'NOTIFICATIONS.DELETE.WARNING_TEXT'|translate}}</p>
     </div>
-  </div>
+    <div class="alert row">
+        <div class="col-xs-12">
+            <p ng-bind-html="notificationToDelete.name_EN"></p>
+            <p ng-bind-html="notificationToDelete.name_FR"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="modal-buttons col-xs-12">
+            <form method="post" ng-submit="deleteNotification()">
+                <input class="btn btn-primary submit" type="submit" value="{{'NOTIFICATIONS.DELETE.DELETE'|translate}}">
+                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'NOTIFICATIONS.DELETE.CANCEL'|translate}}">
+            </form>
+        </div>
+    </div>
 </div>
