Translated Cron logs main page

--- a/templates/post/edit.post.html
+++ b/templates/post/edit.post.html
@@ -107,7 +107,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-7 col-lg-6" style="padding-top: 10px;margin-bottom: 20px;">
                     <p class="input-group">
-                        <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="post.publish_date" is-open="popup.opened" min="minDate" ng-change="detailsUpdated()" datepicker-options="dateOptions" ng-required="true" close-text="{{'POSTS.EDIT.CLOSE'|translate}}" current-text="{{'POSTS.EDIT.TODAY'|translate}}" clear-text="{{'POSTS.EDIT.RESET'|translate}}" />
+                        <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="post.publish_date" is-open="popup.opened" min="minDate" ng-change="detailsUpdated()" datepicker-options="dateOptions" ng-required="true" close-text="{{'DATEPICKER.CLOSE'|translate}}" current-text="{{'DATEPICKER.TODAY'|translate}}" clear-text="{{'DATEPICKER.RESET'|translate}}" />
                         <span class="input-group-btn">
                             <button class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
                         </span>
