--- a/templates/questionnaire/edit.publication.tool.html
+++ b/templates/questionnaire/edit.publication.tool.html
@@ -172,9 +172,9 @@
                                            ng-model="publishedQuestionnaire.occurrence.start_date"
                                            ng-change="setChangesMade()" is-open="popupStart.opened"
                                            datepicker-options="dateOptionsStart" ng-required="true"
-                                           close-text="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.CLOSE'|translate}}"
-                                           current-text="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.TODAY'|translate}}"
-                                           clear-text="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.RESET'|translate}}"/>
+                                           close-text="{{'DATEPICKER.CLOSE'|translate}}"
+                                           current-text="{{'DATEPICKER.TODAY'|translate}}"
+                                           clear-text="{{'DATEPICKER.RESET'|translate}}"/>
                                     <span class="input-group-btn">
                                     <button class="btn btn-default" ng-click="openStart($event)"><i
                                             class="glyphicon glyphicon-calendar"></i></button>
@@ -203,9 +203,9 @@
                                            ng-model="publishedQuestionnaire.occurrence.end_date"
                                            ng-change="setChangesMade()" is-open="popupEnd.opened"
                                            datepicker-options="dateOptionsEnd" ng-required="true"
-                                           close-text="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.CLOSE'|translate}}"
-                                           current-text="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.TODAY'|translate}}"
-                                           clear-text="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.RESET'|translate}}"/>
+                                           close-text="{{'DATEPICKER.CLOSE'|translate}}"
+                                           current-text="{{'DATEPICKER.TODAY'|translate}}"
+                                           clear-text="{{'DATEPICKER.RESET'|translate}}"/>
                                     <span ng-if="addEndDate" class="input-group-btn">
                                     <button class="btn btn-default" ng-click="openEnd($event)"><i
                                             class="glyphicon glyphicon-calendar"></i></button>
