--- a/templates/cron/cron.html
+++ b/templates/cron/cron.html
@@ -12,11 +12,11 @@
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-8 title-content">
                             <span class="glyphicon glyphicon-time"></span>
-                            <h1><strong>Cron</strong></h1>
+                            <h1><strong>{{'CRON.PANEL.TITLE'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
                         <div class="col-md-4 title-breadcrumbs">
-                            <span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Cron</strong></span>
+                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'CRON.PANEL.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
                     <!-- SECTION: Cron date & time -->
@@ -27,7 +27,7 @@
                                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                                         <span style="background-color:#e6edfa; padding-right: 10px">
                                             <span class="fas fa-dot-circle"></span>
-                                            <h2>Cron Date & Time</h2>
+                                            <h2>{{'CRON.PANEL.DATE_TIME'|translate}}</h2>
                                         </span>
                                     </div>
                                 </div>
@@ -35,7 +35,7 @@
                             <div class="row" style="margin-bottom: 15px;">
                                 <div class="col-xs-12">
                                     <p style="margin-bottom: 10px;">
-                                        Use this field to manually set the next cron date and time. To turn off cron, set a date and time in the past.
+                                        {{'CRON.PANEL.DATE_TIME_EXPLANATION'|translate}}
                                     </p>
                                 </div>
                             </div>
@@ -44,7 +44,7 @@
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-6" style="padding-top: 10px;margin-bottom:20px;">
                                             <p class="input-group">
-                                                <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="cronDetailsMod.nextCronDate" is-open="opened" min="minDate" ng-change="setChangesMade()" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                                                <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="cronDetailsMod.nextCronDate" is-open="opened" min="minDate" ng-change="setChangesMade()" datepicker-options="dateOptions" ng-required="true" close-text="{{'DATEPICKER.CLOSE'|translate}}" current-text="{{'DATEPICKER.TODAY'|translate}}" clear-text="{{'DATEPICKER.RESET'|translate}}" />
                                                 <span class="input-group-btn">
                                                     <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                                                 </span>
@@ -57,7 +57,7 @@
                                         </div>
                                         <div class="col-xs-6 col-sm-3">
                                             <div class="panel-buttons">
-                                                <input class="btn btn-primary" type="button" value="Save Changes" ng-class="{'disabled': !checkForm()}" ng-click="submitCronChange()">
+                                                <input class="btn btn-primary" type="button" value="{{'CRON.PANEL.SAVE'|translate}}" ng-class="{'disabled': !checkForm()}" ng-click="submitCronChange()">
                                             </div>
                                         </div>
                                     </div>
@@ -71,7 +71,7 @@
                                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                                         <span style="background-color:#e6edfa; padding-right: 10px">
                                             <span class="fas fa-dot-circle"></span>
-                                            <h2>Repeat Interval</h2>
+                                            <h2>{{'CRON.PANEL.REPEAT'|translate}}</h2>
                                         </span>
                                     </div>
                                 </div>
@@ -79,7 +79,7 @@
                             <div class="row ">
                                 <div class="col-xs-12">
                                     <p style="margin-bottom: 10px;">
-                                        Use this field to set the cron repeat interval. Current repeat interval: <strong>{{cronDetails.repeatInterval}} {{cronDetails.repeatUnits}}</strong>
+                                        {{'CRON.PANEL.REPEAT_EXPLANATION'|translate}} <strong>{{cronDetails.repeatInterval}} {{cronDetails.repeatUnits}}</strong>
                                     </p>
                                 </div>
                             </div>
@@ -96,7 +96,7 @@
                                         </div>
                                         <div class="col-xs-6 col-sm-3" style="margin-bottom:10px;">
                                             <div>
-                                                <input class="btn btn-primary" type="button" value="Save Changes" ng-class="{'disabled': !checkForm()}" ng-click="submitCronChange()">
+                                                <input class="btn btn-primary" type="button" value="{{'CRON.PANEL.SAVE'|translate}}" ng-class="{'disabled': !checkForm()}" ng-click="submitCronChange()">
                                             </div>
                                         </div>
                                     </div>
