--- a/templates/alias/delete.alias.html
+++ b/templates/alias/delete.alias.html
@@ -1,27 +1,27 @@
 <div class="modal-header">
-  <div class="col-xs-12">
-    <h2 class="modal-title">
-      <span class="glyphicon glyphicon-trash"></span> 
-      Delete {{aliasToDelete.type}} 
-    </h2>
-    <p class="modal-title-caption">
-      {{aliasToDelete.name_EN}} / {{aliasToDelete.name_FR}}
-    </p>
-  </div>
+    <div class="col-xs-12">
+        <h2 class="modal-title">
+            <span class="glyphicon glyphicon-trash"></span>
+            {{'ALIAS.DELETE.DELETE'|translate}} {{aliasToDelete.type_display|lowercase}}
+        </h2>
+    </div>
 </div>
 <div class="modal-body">
-  <div class="alert alert-danger" role="alert">
-    <strong>Delete {{aliasToDelete.type}}</strong><br>
-    <p>
-      Are you sure you want to delete the {{aliasToDelete.type}} "{{aliasToDelete.name_EN}}" ?
-    </p>
-  </div>
-  <div class="row">
-    <div class="modal-buttons col-xs-12">
-      <form method="post" ng-submit="deleteAlias()">			
-        <input class="btn btn-primary submit" type="submit" value="Delete">
-        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel">
-      </form>
+    <div class="alert alert-danger" role="alert">
+        <p><b>{{'ALIAS.DELETE.WARNING'|translate}}</b> {{'ALIAS.DELETE.WARNING_TEXT'|translate}}</p>
     </div>
-  </div>
+    <div class="alert row">
+        <div class="col-xs-12">
+            <p ng-bind-html="aliasToDelete.name_EN"></p>
+            <p ng-bind-html="aliasToDelete.name_FR"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="modal-buttons col-xs-12">
+            <form method="post" ng-submit="deleteAlias()">
+                <input class="btn btn-primary submit" type="submit" value="{{'ALIAS.DELETE.DELETE'|translate}}">
+                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'ALIAS.DELETE.CANCEL'|translate}}">
+            </form>
+        </div>
+    </div>
 </div>
