--- a/templates/notification/log.notification.html
+++ b/templates/notification/log.notification.html
@@ -12,7 +12,7 @@
     </div>
     <div class="modal-buttons col-xs-12 col-md-6">
     <span> 
-      <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Close">
+      <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'NOTIFICATIONS.LOG.CLOSE'|translate}}">
     </span>
     </div>
 </div>
