Translated Lab Results list page

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -133,7 +133,7 @@
 											<span  class="fa fa-heartbeat" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">
-											<h1>{{'NAVIGATION_MENU.TEST_RESULTS'|translate}}</h1>
+											<h1>{{'NAVIGATION_MENU.LAB_RESULTS'|translate}}</h1>
 										</div>
 										<div class="panel-description">
 											<p>{{'NAVIGATION_MENU.TEST_RESULTS_SUB'|translate}}</p>
