--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -52,7 +52,7 @@
                     <li ui-sref-active="active">
                         <a ui-sref="test-result" ng-click="closeNav()">
                             <span class="fa fa-heartbeat" aria-hidden="true"></span>
-                            {{'NAVIGATION_MENU.TEST_RESULTS'|translate}}
+                            {{'NAVIGATION_MENU.LAB_RESULTS'|translate}}
                         </a>
                     </li>
                     <li ui-sref-active="active">
