--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -114,7 +114,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-heartbeat"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.TEST_RESULTS'|translate}}</strong></div>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.LAB_RESULTS'|translate}}</strong></div>
                         </div>
                     </div>
                 </div>
