Translated Email delete page

--- a/templates/email/delete.email.html
+++ b/templates/email/delete.email.html
@@ -1,27 +1,27 @@
 <div class="modal-header">
-  <div class="col-xs-12">
-    <h2 class="modal-title">
-      <span class="glyphicon glyphicon-trash"></span> 
-      Delete Email 
-    </h2>
-    <p class="modal-title-caption">
-      {{emailToDelete.subject_EN}} / {{emailToDelete.subject_FR}}
-    </p>
-  </div>
+    <div class="col-xs-12">
+        <h2 class="modal-title">
+            <span class="glyphicon glyphicon-trash"></span>
+            {{'EMAILS.DELETE.WARNING'|translate}}
+        </h2>
+    </div>
 </div>
 <div class="modal-body">
-  <div class="alert alert-danger" role="alert">
-    <strong>Delete Email</strong><br>
-    <p>
-      Are you sure you want to delete the email "{{emailToDelete.subject_EN}}" ?
-    </p>
-  </div>
-  <div class="row">
-    <div class="modal-buttons col-xs-12">
-      <form method="post" ng-submit="deleteEmail()">      
-        <input class="btn btn-primary submit" type="submit" value="Delete">
-        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel">
-      </form>
+    <div class="alert alert-danger" role="alert">
+        <p><b>{{'EMAILS.DELETE.WARNING'|translate}}</b> {{'EMAILS.DELETE.WARNING_TEXT'|translate}}</p>
     </div>
-  </div>
+    <div class="alert row">
+        <div class="col-xs-12">
+            <p ng-bind-html="emailToDelete.subject_EN"></p>
+            <p ng-bind-html="emailToDelete.subject_FR"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="modal-buttons col-xs-12">
+            <form method="post" ng-submit="deleteEmail()">
+                <input class="btn btn-primary submit" type="submit" value="{{'ALIAS.DELETE.DELETE'|translate}}">
+                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'ALIAS.DELETE.CANCEL'|translate}}">
+            </form>
+        </div>
+    </div>
 </div>
