Translated diagnosis translation listing and delete page

--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -61,12 +61,12 @@
                             {{'NAVIGATION_MENU.QUESTIONNAIRES'|translate}}
                         </a>
                     </li>
-                    <li ui-sref-active="active">
+<!--                    <li ui-sref-active="active">
                         <a ui-sref="email" ng-click="closeNav()">
                             <span class="fa fa-envelope" aria-hidden="true"></span>
                             {{'NAVIGATION_MENU.EMAIL'|translate}}
                         </a>
-                    </li>
+                    </li>-->
                     <li ui-sref-active="active">
                         <a ui-sref="legacy-questionnaire" ng-click="closeNav()">
                             <span class="fa fa-pencil-square" aria-hidden="true"></span>
