Translated diagnosis translation editing page and Patient list

--- a/templates/diagnosis/diagnosis-translation.html
+++ b/templates/diagnosis/diagnosis-translation.html
@@ -30,7 +30,7 @@
                         <!-- Search field -->
                         <div class="search col-xs-12 col-sm-6 col-md-4">
                             <div class="form-group has-feedback" style="margin-bottom: 0">
-                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterDiagnosis(filterValue)" placeholder="{{'DIAGNOSIS.LIST.SEARCH'|translate}}">
+                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterDiagnosisTranslation(filterValue)" placeholder="{{'DIAGNOSIS.LIST.SEARCH'|translate}}">
                                 <span class="glyphicon glyphicon-search form-control-feedback"></span>
                             </div>
                         </div>
