Fixed translation typos and mistakes

--- a/templates/diagnosis/add.diagnosis-translation.html
+++ b/templates/diagnosis/add.diagnosis-translation.html
@@ -96,7 +96,7 @@
                                 </uib-accordion-heading>
                                 <div ng-if="newDiagnosisTranslation.name_EN || newDiagnosisTranslation.description_EN" class="description">
                                     <p ng-if="newDiagnosisTranslation.name_EN" style="margin-bottom:5px;">
-                                        <strong>EN</strong>
+                                        <strong>{{'DIAGNOSIS.ADD.ENGLISH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newDiagnosisTranslation.name_EN}}
                                     </p>
@@ -106,7 +106,7 @@
                                 </div>
                                 <div ng-if="newDiagnosisTranslation.name_FR || newDiagnosisTranslation.description_FR" class="description">
                                     <p ng-if="newDiagnosisTranslation.name_FR" style="margin-bottom:5px;">
-                                        <strong>FR</strong>
+                                        <strong>{{'DIAGNOSIS.ADD.FRENCH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newDiagnosisTranslation.name_FR}}
                                     </p>
