--- a/templates/test-result/add.test-result.html
+++ b/templates/test-result/add.test-result.html
@@ -87,7 +87,7 @@
                                 </uib-accordion-heading>
                                 <div ng-if="newTestResult.name_EN || newTestResult.description_EN" class="description">
                                     <p ng-if="newTestResult.name_EN" style="margin-bottom:5px;">
-                                        <strong>EN</strong>
+                                        <strong>{{'TEST.ADD.ENGLISH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newTestResult.name_EN}}
                                     </p>
@@ -95,7 +95,7 @@
                                 </div>
                                 <div ng-if="newTestResult.name_FR || newTestResult.description_FR" class="description">
                                     <p ng-if="newTestResult.name_FR" style="margin-bottom:5px;">
-                                        <strong>FR</strong>
+                                        <strong>{{'TEST.ADD.FRENCH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newTestResult.name_FR}}
                                     </p>
@@ -119,14 +119,14 @@
                                 </uib-accordion-heading>
                                 <div ng-if="newTestResult.group_EN" class="description">
                                     <p>
-                                        <strong>EN</strong>
+                                        <strong>{{'TEST.ADD.ENGLISH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newTestResult.group_EN}}
                                     </p>
                                 </div>
                                 <div ng-if="newTestResult.group_FR" class="description">
                                     <p>
-                                        <strong>FR</strong>
+                                        <strong>{{'TEST.ADD.FRENCH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newTestResult.group_FR}}
                                     </p>
