--- a/templates/notification/add.notification.html
+++ b/templates/notification/add.notification.html
@@ -63,7 +63,7 @@
                                 <div ng-if="newNotification.type" class="description">
                                     <p>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                                        {{newNotification.type.name}}
+                                        {{newNotification.type.name_display}}
                                     </p>
                                 </div>
                             </div>
@@ -84,7 +84,7 @@
                                 </uib-accordion-heading>
                                 <div ng-if="newNotification.name_EN || newNotification.description_EN" class="description">
                                     <p ng-if="newNotification.name_EN" style="margin-bottom:5px;">
-                                        <strong>EN</strong>
+                                        <strong>{{'NOTIFICATIONS.ADD.ENGLISH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newNotification.name_EN}}
                                     </p>
@@ -92,7 +92,7 @@
                                 </div>
                                 <div ng-if="newNotification.name_FR || newNotification.description_FR" class="description">
                                     <p ng-if="newNotification.name_FR" style="margin-bottom:5px;">
-                                        <strong>FR</strong>
+                                        <strong>{{'NOTIFICATIONS.ADD.FRENCH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newNotification.name_FR}}
                                     </p>
