Fixed a bug in question edit

--- a/templates/questionnaire/edit.question.html
+++ b/templates/questionnaire/edit.question.html
@@ -67,7 +67,7 @@
             <div ng-hide="question.readOnly || question.final">
                 <!-- Edit text box options -->
                 <div class="col-xs-12 col-md-8" ng-if="question.typeId === '3'">
-                    <p>{{'QUESTIONNAIRE_MODULE.QUESTION_EDIT.NO_OPTION":'|translate}}</p>
+                    <p>{{'QUESTIONNAIRE_MODULE.QUESTION_EDIT.NO_OPTION'|translate}}</p>
                 </div>
 
                 <!-- Edit radio button options -->
